Changed to standalone project and added routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
   <body>
     <app-header></app-header>
     <div class="app-container">
-      <app-search-translate></app-search-translate>
-      <app-card></app-card>
+      <router-outlet></router-outlet>
     </div>
   </body>
 </html>
